# json-schema-x-graphql

./: .env.example  .gitignore  .gitmodules  .prettierignore  .releaserc.json  CHANGELOG.md  CONFLICT_DETECTION_SUMMARY.md  CONTEXT.md  CONTRIBUTING.md  CONVERTER_FIX_SUMMARY.md  CONVERTER_OUTPUT_REPORT.md  CONVERTER_QUICK_REFERENCE.md  Cargo.toml  GETTING_STARTED.md  GRAPHQL_SPEC_SCHEMA_GUIDE.md  GRAPHQL_SPEC_SCHEMA_README.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_QUICK_REFERENCE.md  IMPROVEMENT_PLAN.md  LICENSE  MIGRATION_PLAN.md  MULTI_SCHEMA_GENERATION_SUMMARY.md  PUBLISHING.md  QUICKSTART.md  README.md  RELEASE_QUICK_REF.md  RUN_TESTS.sh  SDL_SCROLLING_FIX.md  SESSION_SUMMARY_DEC_30.md  SETUP_VERIFICATION.md  SHELL_CONFIGURATION.md  USER_REQUEST_FULFILLMENT.md  X-GRAPHQL-NAMESPACE-INITIATIVE-SUMMARY.md  X-GRAPHQL-QUICK-REFERENCE.md  codecov.yml  debug-converter.js  eslint.config.js  full_log.txt  graphql-spec-schema.json  (+12 more)
.agent/rules/: graphify.md
.cargo/: config.toml
.github/: dependabot.yml  release-please.json
.github/agents/: ci.agent.md  composer.agent.md  jxql.agent.md  website.agent.md
.github/pr-descriptions/: docs-adr-federation-concepts.md  feat-19-voyager.md  feat-20-er-diagram.md  fix-node-converter-circular-ref.md
.github/workflows/: benchmarks.yml  ci.yml  composition-pipeline.yml  comprehensive-tests.yml  deploy-pages.yml  deploy-schema-authoring.yml  docs.yml  release-please.yml  release.yml  security-audit.yml  validation-and-benchmarks.yml  validation-and-testing.yml
.oxlint/: config.json
bench-results/: baseline.md  rust-baseline.txt
converters/: README.md  manifest.json
converters/cli/: package.json  tsconfig.json
converters/node/: .eslintrc.json  README.md  benchmark-report.json  codegen.ts  coverage-output.txt  current-benchmark.json  eslint.config.cjs  global.setup.js  integration-report.json  jest.config.cjs  jest.config.wasm.js  jest.setup.js  output.graphql  package-lock.json  package.json  roundtrip-debug.mjs  test-final-ref.mjs  test-output.txt  tsconfig.json  tsconfig.test.json  wasm-transformer.js
converters/rust/: Cargo.toml  LICENSE.md  READINESS_ASSESSMENT.md  README.md  TASK_COMPLETION_REPORT.md  TESTING_QUICKSTART.md  TEST_FIXES_SUMMARY.md  cargo.sh  deny.toml  measure-coverage.sh  package.json  temp_test.rs
converters/rust/.cargo/: config.toml
converters/rust/benches/: conversion_benchmark.rs  validation_benchmark.rs
converters/rust/coverage/: cobertura.xml  tarpaulin-report.html  tarpaulin-report.json
converters/rust/examples/: json_to_sdl.rs  test_convert.rs
converters/rust/fuzz/: Cargo.toml
converters/rust/fuzz/fuzz_targets/: graphql_to_json.rs  json_to_graphql.rs  round_trip.rs
converters/rust/security-reports/: security-summary-20251124-111059.txt
converters/rust/src/: api_types.rs  case_conversion.rs  error.rs  graphql_ast_json.rs  graphql_to_json.rs  json_to_graphql.rs  lib.rs  schema.rs  types.rs  validator.rs  wasm.rs
converters/rust/src/test_utils/: graphql_validation.rs  mod.rs  schema_validation.rs
converters/rust/src/validation/: graphql_sdl.rs  json_schema.rs  mod.rs
converters/rust/tests/: cli_tests.rs  edge_cases.rs  error_tests.rs  integration_tests.rs  repro_issue.rs  validation_tests.rs  validator_tests.rs  x_graphql_shared_tests.rs
converters/test-data/: adr_description_block.json  adr_empty_object.json  adr_ref_naming_collision.json  adr_small_inline_override.json  (+24 more)
docs/: CLI-WRAPPER-GUIDE.md  COMPREHENSIVE_GUIDE.md  CONVERSION_FIX_SUMMARY.md  CONVERTER_DEBUGGING_SESSION.md  CONVERTER_DEBUG_SUMMARY.md  EXECUTIVE_SUMMARY_SCRIPT_COMPARISON.md  FEDERATION_EXAMPLES_PLAN.md  FINAL_FIX_STATUS.md  NEXT-STEPS-ACTION-PLAN.md  PHASE_2_IMPLEMENTATION.md  PHASE_3_EXECUTIVE_SUMMARY.md  PHASE_3_WEB_EDITOR_SUMMARY.md  PROJECT-GUIDE.md  PROJECT_SUMMARY.md  QA-CHECKLIST.md  README.md  REPOSITORY_STATUS.md  SESSION-COMPLETION-REPORT.md  STATUS_UPDATE_SUMMARY.md  TESTING_COMPLETE.md  TESTING_GUIDE.md  TEST_EXECUTION_STATUS.md  WORK-SESSION-SUMMARY.md  dependency-reduction-plan-review-1.md  dependency-reduction-plan-review-2.md  dependency-reduction-plan.md  graphql-federation-vs-composition.md  monorepo-migration-plan.md
examples/: dvga-secured.schema.json  federal-procurement.graphql  test.json  user-service.graphql  user-service.schema.json
frontend/: COMPARISON.md  GRAPHQL_EDITOR_FIX.md  IMPLEMENTATION_PLAN.md  M1_M2_COMPLETION_SUMMARY.md  M3_M4_COMPLETION_REPORT.md  PHASE_3_IMPLEMENTATION.md  QUICKSTART.md  README.md  SETUP.md  SUBGRAPH_COMPOSER_SPEC.md  VISUAL_EDITOR_GUIDE.md  package.json
graphify-out/: GRAPH_REPORT.md
output/: BENCHMARK_REPORT.md  CONVERTER_COMPARISON.md  CONVERTER_REPORT.md  SDL_COMPARISON_REPORT.md  benchmark_results.txt  contract-data.graphql  graphql-spec-schema-fixed.graphql  graphql-spec-schema-generated.graphql  intake-process.graphql  legacy-procurement.debug.graphql  legacy-procurement.graphql  logistics-management.graphql  test-node-fixed.graphql  test-node-improved.graphql  test-node.graphql  test-results.txt  test-rust.graphql  test.graphql  test.roundtrip.json
reports/: skip-report-summary.txt  skip-report.json
schema/: converter-api.graphql  x-graphql-extensions.schema.json
scripts/: README.md  add-federation-schema-link.sh  benchmark.mjs  build-wasm.sh  clean-target.sh  compare-outputs.sh  comprehensive-test-suite.sh  roundtrip-ci.mjs  run-all-pnpm-scripts.js  run-all-validation.sh  run-benchmarks.sh  run-integration-tests.sh  run-tests.sh  rust-advanced-testing.sh  rust-security-audit.sh  skip-report.js  summarize-skip-report.js  test-both-converters.js  test-converters.sh  test-federation-examples.sh  test-node-converter.js  test-node-converter.mjs  test-parity.sh  test-roundtrip.js  validate-composition-drift.js  validate-federation-composition.js  validate-graphql-vs-jsonschema.mjs  validate-schema-sync.mjs  validate-test-schemas.sh
src/: lib.rs
test-output/: node-cycle2.json  rust-cycle1.graphql  rust-cycle3.graphql  rust-cycle3.json
website/: .gitignore  next.config.mjs  package.json  theme.config.jsx
(+1189 files in other folders)
