[package]
name = "json-schema-x-graphql"
version = "2.0.0"
edition = "2021"
authors = ["JJediny and Contributors"]
description = "Bidirectional JSON Schema ↔ GraphQL SDL converter with x-graphql extensions and full Apollo Federation v2 support"
license = "MIT"
homepage = "https://github.com/JJediny/json-schema-x-graphql"
repository = "https://github.com/JJediny/json-schema-x-graphql"
documentation = "https://docs.rs/json-schema-x-graphql"
readme = "README.md"
keywords = ["json-schema", "graphql", "converter", "federation", "x-graphql"]
categories = ["parsing", "wasm", "web-programming", "api-bindings", "development-tools"]
rust-version = "1.70"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-graphql-parser = "7.0.5"
async-graphql-value = "7.0.5"
async-graphql = { version = "7.0.5", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "1.0"


indexmap = { version = "2.1", features = ["serde"] }
regex = "1.7"
clap = { version = "4.5", features = ["derive"], optional = true }
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }
bytes = { version = ">=1.11.1", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
anyhow = { version = "1.0", optional = true }
opentelemetry = { version = "0.22", default-features = false, features = [
  "trace",
], optional = true }

# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

# Ensure getrandom compiles for wasm32-unknown-unknown using the wasm_js backend.
# This enables Web Crypto (via wasm-bindgen) as the entropy source when building for web.
getrandom = { version = "0.3", features = ["wasm_js"] }

# Optional caching is implemented in-crate to avoid pulling in an external LRU dependency.

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simd-json = { version = "0.13", features = ["serde_impl"] }

[dev-dependencies]
pretty_assertions = "1.4"
criterion = "0.5"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }


[features]
default = ["wasm"]
wasm = ["wasm-bindgen", "console_error_panic_hook", "serde-wasm-bindgen"]
caching = []
cli = ["clap", "reqwest", "bytes", "tokio", "anyhow"]
graphql-server = ["async-graphql"]
telemetry = ["opentelemetry"]


[[bin]]
name = "jxql"
path = "src/bin/jxql.rs"
required-features = ["cli"]

[[bench]]
name = "conversion_benchmark"
harness = false
